exports[`roadhog should return API returns (ok case) 1`] = `
Array [
  Object {
    "done": false,
    "value": Array [
      "http://an-url",
      Object {
        "some": "options",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": "fallback",
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": undefined,
          "type": "API_GET_TODOS_STARTED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "json": [Function],
      "ok": true,
    },
  },
  Object {
    "done": false,
    "value": Object {
      "some": "value",
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "data": Object {
              "some": "value",
            },
            "raw": Object {
              "json": [Function],
              "ok": true,
            },
          },
          "type": "API_GET_TODOS_END",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": Object {
      "some": "value",
    },
  },
]
`;

exports[`roadhog should return fallback (ko case) 1`] = `
Array [
  Object {
    "done": false,
    "value": Array [
      "http://an-url",
      Object {
        "some": "options",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": "fallback",
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": undefined,
          "type": "API_GET_TODOS_STARTED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "json": [Function],
      "ok": false,
    },
  },
  Object {
    "done": false,
    "value": "fallback",
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "data": "fallback",
            "raw": Object {
              "json": [Function],
              "ok": false,
            },
          },
          "type": "API_GET_TODOS_END",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": "fallback",
  },
]
`;

exports[`roadhog should trigger an error event 1`] = `
Array [
  Object {
    "done": false,
    "value": Array [
      "http://an-url",
      Object {
        "some": "options",
      },
    ],
  },
  Object {
    "raw": Object {
      "done": false,
      "value": Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    },
    "value": undefined,
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": undefined,
          "type": "API_GET_TODOS_STARTED",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "json": [Function],
      "ok": false,
    },
  },
  Object {
    "done": false,
    "value": undefined,
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "data": undefined,
            "raw": Object {
              "json": [Function],
              "ok": false,
            },
            "status": undefined,
            "statusText": undefined,
          },
          "type": "API_GET_TODOS_ERROR",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "data": undefined,
            "raw": Object {
              "json": [Function],
              "ok": false,
            },
          },
          "type": "API_GET_TODOS_END",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": undefined,
  },
]
`;
